--- a/ecom/requirements.txt
+++ b/ecom/requirements.txt
@@ -29,6 +29,7 @@ oscrypto==1.3.0
 pandas==2.2.3
 pillow==11.0.0
 psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pycparser==2.22
 pydyf==0.11.0
 pyHanko==0.25.3
